started to make polynomial

--- a/tensorflowjs/regression.html
+++ b/tensorflowjs/regression.html
@@ -13,6 +13,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.js"></script>
     <script src="regression.js"></script>
+    <select id="regressionTypeSelect">
+        <option value="linear">Linear</option>
+        <option value="polynomial">Polynomial</option>
+        <option value="third-degree">of third degree</option>
+    </select>
+    <br>
+    <br>
 </body>
 
 </html>
