--- a/self driving car/index.html
+++ b/self driving car/index.html
@@ -49,6 +49,7 @@
 
     </script>
     <script src="nn.js"></script>
+    <script src="vector.js"></script>
     <script src="player.js"></script>
     <script src="main.js"></script>
 </body>
